--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
           <li><a href="#zoneNews">News</a></li>
           <li><a href="#zoneMusic">Songs</a></li>
           <li><a href="#zonePhoto">Photos</a></li>
+          <li><a href="#zoneLiked">Likes</a></li>
         </ul>
       </nav>
     </header>
@@ -51,7 +52,7 @@
             </div>
           </div>
         </section>
-        <aside class="zoneLiked">
+        <aside id="zoneLiked" class="zoneLiked">
           <div class="titel">
             <span class="icons">
               <svg class="icon icon-like">
